Changes to Travis Debugging (verbose enabled, watch for changes disabled, fail on bugs in front matter

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 script:
   - jekyll doctor
-  - jekyll build
+  - jekyll build -V --no-watch --strict_front_matter
 
 # Uncomment below when we register a domain
 # deploy:
